not_in_use/wedding-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-website-ingress
  namespace: wedding-website
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wedding.alexnorum.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wedding-website
            port:
              number: 80
